force-app/main/default/objects/Notification_Subscription__c/Notification_Subscription__c.object-meta.xml
<CustomObject>
    <label>Notification Subscription</label>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>