force-app/main/default/objects/Notification_Subscription__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <label>Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NotificationChannels</valueSetName>
    </valueSet>
</CustomField>