force-app/main/default/objects/Notification_Subscription__c/fields/Notification_Name__c.field-meta.xml
<CustomField>
    <fullName>Notification_Name__c</fullName>
    <description>Label of the notification</description>
    <label>Notification Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>