force-app/main/default/objects/Notification_Subscription__c/fields/Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Subscribed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Subscribed</label>
    <type>Checkbox</type>
</CustomField>