force-app/main/default/objects/Notification_Subscription__c/fields/User_Default_Notification__c.field-meta.xml
<CustomField>
    <fullName>User_Default_Notification__c</fullName>
    <label>User Default Notification</label>
    <referenceTo>Notification_Default_Channels__c</referenceTo>
    <relationshipLabel>Notification Subscriptions</relationshipLabel>
    <relationshipName>Notification_Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>